# dev-templates

./: .gitignore  README.md  flake.nix
.obsidian/: workspace.json
c/: .gitignore  Makefile  compile_flags.txt  flake.nix  justfile
c/include/: utils.h
c/src/: main.c
java/: flake.nix
lcd/: .gdb_history  CMakeLists.txt  justfile  lcd.c  lcd.h  led.c  led.h  main.c  pico_sdk_import.cmake
mysql/: flake.nix
pico-arm/: .clangd  CMakeLists.txt  flake.nix  hey.c  justfile  main.c  notes.txt  pico_sdk_import.cmake
pico-arm/.helix/: languages.toml
platformio/: flake.nix  platformio.ini
python/: .gitignore  flake.nix  pyproject.toml
rust/: Cargo.toml  flake.nix
zig/: flake.nix
